--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ nav_external_links:
 # appears at the bottom of every page's main content
 
 # Back to top link
-back_to_top: true
+back_to_top: false
 back_to_top_text: "Back to top"
 
 footer_content: "Copyright &copy; 2023 @EmlynLJ"
