--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: kerbal.io Help and Docs
+title: kerbal.io Docs
 description: Info about our services.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://docs.kerbal.io" # the base hostname & protocol for your site, e.g. http://example.com
